Fixed header font weight.

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -38,6 +38,7 @@ header ul {
 header h1 {
 	font-family: 'Londrina Sketch';
 	font-size: 4em;
+	font-weight: 400;
 	margin: 0 0 0 0;
 	padding: 0 0 0 0;
 	text-align: center;
