Created objects to represent lines and shots. Improved the accuracy of clicks on the canvas.  Added the ability for the server to respond to a Shot indicating if it was a hit or a miss.  Right now this is only based on a random choice but a database check can be easily added.

--- a/public/style/canvas.css
+++ b/public/style/canvas.css
@@ -3,8 +3,7 @@
  */
 
 #opponentBoard, #myBoard {
-	/*background-color: rgb(173,173,173);*/
-	background-color: gray;
+	background-color: rgb(173,173,173);
 	margin: 0 2.5em 0 2.5em;
 }
 
