--- a/public/style/main.css
+++ b/public/style/main.css
@@ -106,6 +106,11 @@ nav li a:link, nav li a:visited {
 	float: right;
 }
 
+#menuUsername {
+	margin: 4px 0 0 0;
+	font-size: .7em;
+}
+
 
 /*
  * Main Content
