--- a/public/style/main.css
+++ b/public/style/main.css
@@ -122,6 +122,19 @@ nav li a:link, nav li a:visited {
 	font-family: 'Arial', 'Sans Serif';
 }
 
+#createBattle {
+	font-size: 1em;
+	border: 2px solid rgb(173, 173, 173);
+	padding: 5px 0 5px 0;
+	width: 15%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#createBattle:hover {
+	background-color: rgba(173, 173, 173, .25);
+}
+
 
 #mainContent table {
 	border-collapse: collapse;
@@ -145,13 +158,12 @@ nav li a:link, nav li a:visited {
 }
 
 #mainContent tr:hover {
-	/*background-color: rgb(173, 173, 173);*/
 	color: rgb(22,41,67);
-	background: linear-gradient(top, rgb(209,209,209) 27%, rgb(173,173,173) 64%);
-	background: -o-linear-gradient(top, rgb(209,209,209) 27%, rgb(173,173,173) 64%);
-	background: -moz-linear-gradient(top, rgb(209,209,209) 27%, rgb(173,173,173) 64%);
-	background: -webkit-linear-gradient(top, rgb(209,209,209) 27%, rgb(173,173,173) 64%);
-	background: -ms-linear-gradient(top, rgb(209,209,209) 27%, rgb(173,173,173) 64%);
+	background: -o-linear-gradient(top, rgba(209,209,209, 0.75) 27%, rgba(173,173,173, 0.75) 64%);
+	background: -moz-linear-gradient(top, rgba(209,209,209, 0.75) 27%, rgba(173,173,173, 0.75) 64%);
+	background: -webkit-linear-gradient(top, rgba(209,209,209, 0.75) 27%, rgba(173,173,173, 0.75) 64%);
+	background: -ms-linear-gradient(top, rgba(209,209,209, 0.75) 27%, rgba(173,173,173, 0.75) 64%);
+	background: linear-gradient(top, rgba(209,209,209, 0.75) 27%, rgba(173,173,173, 0.75) 64%);
 }
 
 #orientationSelection {
