--- a/public/style/main.css
+++ b/public/style/main.css
@@ -122,6 +122,25 @@ nav li a:link, nav li a:visited {
 	font-family: 'Arial', 'Sans Serif';
 }
 
+#instructions {
+	background-color: #838da9;
+	padding: 1.5em;
+	color: black;
+	margin-top: 3em;
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+}
+
+#instructions li {
+	margin-bottom: .75em;
+}
+
+.italic {
+	font-style: italic;
+}
+
 #createBattle {
 	font-size: 1em;
 	border: 2px solid rgb(173, 173, 173);
