Fixed database environment variable.

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -166,7 +166,7 @@ nav li a:link, nav li a:visited {
 }
 
 #mainContent table, th, td {
-	border: 1px solid rgb(173,173,173);;
+	border: 1px solid rgb(173,173,173);
 }
 
 #mainContent th, td {
